--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/index.css">
-  <title>TayNet | Home</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
+  <title>TayNet | Home</title>
 </head>
 <body>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="topnav" id="main">
   <a href="#home" class="active">Home</a>
   <a href="projects.html">Projects</a>
@@ -14,12 +14,12 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-  <i class="fa fa-bars"></i>
 </a>
 </div>
 
 <h1>TayNet</h1>
-<p>CURRENTLY UNDER DEVELOPMENT</p>
+<img src="images/pfp.png" alt="Tay's Profile picture" class="center">
+<p>Im tay and i like making bullshit</p>
 
 </body>
 </html>
