--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheer" href="css/projects.css">
   <title>TayNet | Projects</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
@@ -14,7 +15,6 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-  <i class="fa fa-bars"></i>
 </a>
 </div>
 
