--- a/projects.html
+++ b/projects.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheer" href="css/projects.css">
-  <title>TayNet | Projects</title>
+  <link rel="stylesheet" href="css/projects.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
+  <title>TayNet | Projects</title>
 </head>
 <body>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="topnav" id="main">
   <a href="index.html">Home</a>
   <a href="#projects" class="active">Projects</a>
@@ -19,7 +18,7 @@
 </div>
 
 <h1>Projects</h1>
-<p>CURRENTLY UNDER DEVELOPMENT</p>
+<p>Come back later</p>
 
 </body>
 </html>
