--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <h1>TayNet</h1>
 <img src="images/pfp.png" alt="Tay's Profile picture" class="center">
 <p>Im tay and i like making bullshit</p>
+<p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
+<p>i love playing rhythm games but i also play a few shooters</p>
 
 </body>
 </html>
