--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw">Discord</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 </a>
 </div>
 
 <h1>TayNet</h1>
 <img src="images/pfp.png" alt="Tay's Profile picture" class="center">
+<img src="images/kotori.png" alt="Kotori" class="kotori">
 <p>Im tay and i like making bullshit</p>
 <p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
 <p>i love playing rhythm games but i also play a few shooters</p>
