--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="topnav" id="main">
   <a href="#home" class="active">Home</a>
   <a href="projects.html">Projects</a>
+  <a href="friends.html">Friends</a>
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
