--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 <div class="topnav" id="main">
   <a href="index.html">Home</a>
   <a href="#projects" class="active">Projects</a>
+  <a href="friends.html">Friends</a>
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
@@ -19,8 +20,10 @@
 </div>
 
 <h1>Projects</h1>
-<img src="images/projects empty.gif" alt="Empty" class="center">
-<p>Come back later</p>
-
+<div class="project1">
+  <img src="images/www.png" alt="WWW Globe" class="wwwglobe">
+  <h2>TayNet.uk</h2>
+  <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
+</div>
 </body>
 </html>
