--- a/friends.html
+++ b/friends.html
@@ -23,19 +23,25 @@
 <div class="zukry">
   <h2>Zukry</h2>
   <img src="images/zukry.png" alt="Zukry's profile picture" class="zukrypfp">
-  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="https://scoresaber.com/u/76561198352885497" class="zukss">Scoresaber</a></p>
+  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
 </div>
-<p><br></p>
+<br>
 <div class="xsky">
   <h3>xsky</h3>
   <img src="images/xsky.png" alt="xsky's profile picture" class="xskypfp">
   <p>"balls"</p>
 </div>
-<p><br></p>
+<br>
 <div class="lux">
   <h4>Luxifer</h4>
-  <img src="images/luxifer.png" alt="Luxifer's profile picture" class="luxiferpfp"
-  <p>literally the dad tay never had<br><br><a href="https://m.twitch.tv/xxxluxifer" class="luxttv"></p>
+  <img src="images/luxifer.png" alt="Luxifer's profile picture" class="luxiferpfp">
+  <p>literally the dad tay never had<br><br><a href="https://m.twitch.tv/xxxluxifer">Twitch</a><a href="https://m.youtube.com/channel/UC7hqszMgcHjM8YwDyZSESUA">Youtube</a><a href="https://scoresaber.com/u/76561198251142354">Scoresaber</a></p>
+</div>
+<br>
+<div class="wunder">
+  <h5>Wunder</h5>
+  <img src="images/wunder.png" alt="Wunder's profile picture" class="wunderpfp">
+  <p>your local mentality crippled person</p>
 </div>
 </body>
 </html>
