--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <a href="#home" class="active">Home</a>
   <a href="projects.html">Projects</a>
   <a href="friends.html">Friends</a>
+  <a href="helpers.html">Helpers</a>
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw">Discord</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-</a>
 </div>
 
 <h1>TayNet</h1>
