--- a/friends.html
+++ b/friends.html
@@ -37,8 +37,26 @@
   <p>literally the dad tay never had<br><br><a href="https://m.twitch.tv/xxxluxifer">Twitch</a><a href="https://m.youtube.com/channel/UC7hqszMgcHjM8YwDyZSESUA">Youtube</a><a href="https://scoresaber.com/u/76561198251142354">Scoresaber</a></p>
 </div>
 <br>
+<div class="pyro">
+  <h5>Pyro</h5>
+  <img src="images/pyro.png" alt="Pyros's profile picture" class="pyropfp">
+  <p>words go here</p>
+</div>
+<br>
+<div class="bcg">
+  <h6>British Cat Girl</h6>
+  <img src="images/bcg.png" alt="British Cat Girls's profile picture" class="bcgpfp">
+  <p>words go here</p>
+</div>
+<br>
+<div class="lorcan">
+  <h7>Lorcan</h7>
+  <img src="images/lorcan.png" alt="lorcan's profile picture" class="lorcanpfp">
+  <p>"very straight"<br>Discord: Lorcan#2909</p>
+</div>
+<br>
 <div class="wunder">
-  <h5>Wunder</h5>
+  <h8>Wunder</h8>
   <img src="images/wunder.png" alt="Wunder's profile picture" class="wunderpfp">
   <p>your local mentality crippled person</p>
 </div>
