--- a/friends.html
+++ b/friends.html
@@ -24,39 +24,39 @@
   <img src="images/zukry.png" alt="Zukry's profile picture" class="zukrypfp">
   <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
 </div>
-<br>
+<br><br><br>
 <div class="xsky">
-  <h3>xsky</h3>
+  <h2>xsky</h2>
   <img src="images/xsky.png" alt="xsky's profile picture" class="xskypfp">
   <p>"balls"</p>
 </div>
-<br>
+<br><br>
 <div class="lux">
-  <h4>Luxifer</h4>
+  <h2>Luxifer</h2>
   <img src="images/luxifer.png" alt="Luxifer's profile picture" class="luxiferpfp">
   <p>literally the dad tay never had<br><br><a href="https://m.twitch.tv/xxxluxifer">Twitch</a><a href="https://m.youtube.com/channel/UC7hqszMgcHjM8YwDyZSESUA">Youtube</a><a href="https://scoresaber.com/u/76561198251142354">Scoresaber</a></p>
 </div>
-<br>
+<br><br>
 <div class="pyro">
-  <h5>Pyro</h5>
+  <h2>Pyro</h2>
   <img src="images/pyro.png" alt="Pyros's profile picture" class="pyropfp">
   <p>words go here</p>
 </div>
-<br>
+<br><br><br><br><br>
 <div class="bcg">
-  <h6>British Cat Girl</h6>
+  <h2>British Cat Girl</h2>
   <img src="images/bcg.png" alt="British Cat Girls's profile picture" class="bcgpfp">
-  <p>words go here</p>
+  <p>Your resident flat chested futa cat girl</p>
 </div>
-<br>
+<br><br><br>
 <div class="lorcan">
-  <h7>Lorcan</h7>
+  <h2>Lorcan</h2>
   <img src="images/lorcan.png" alt="lorcan's profile picture" class="lorcanpfp">
   <p>"very straight"<br>Discord: Lorcan#2909</p>
 </div>
-<br>
+<br><br><br>
 <div class="wunder">
-  <h8>Wunder</h8>
+  <h2>Wunder</h2>
   <img src="images/wunder.png" alt="Wunder's profile picture" class="wunderpfp">
   <p>your local mentality crippled person</p>
 </div>
