--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="topnav" id="main">
   <a href="#home" class="active">Home</a>
   <a href="projects.html">Projects</a>
-  <a href="friends.html">Friends</a>
+  <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
@@ -24,6 +24,4 @@
 <p>Im tay and i like making bullshit</p>
 <p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
 <p>i love playing rhythm games but i also play a few shooters</p>
-
-</body>
 </html>
