--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <div class="topnav" id="main">
   <a href="index.html">Home</a>
   <a href="#projects" class="active">Projects</a>
-  <a href="friends.html">Friends</a>
+  <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
   <a href="https://twitch.tv/ExtincTay">Twitch</a>
   <a href="https://twitter.com/ExtincTay">Twitter</a>
