--- a/friends/index.html
+++ b/friends/index.html
@@ -21,8 +21,8 @@
 <h1>My Friends</h1>
 <div class="zukry">
   <h2>Zukry</h2>
-  <img src="../images/zukry.png" alt="Zukry's profile picture" class="zukrypfp">
-  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
+  <img src="../images/zukry.png" alt="Zukry's profile picture" class="zukrypfp" href="zukry.html">
+  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="zukry.html">Profile</a><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
 </div>
 <br><br><br>
 <div class="xsky">
