--- a/friends/luxifer.html
+++ b/friends/luxifer.html
@@ -19,17 +19,17 @@
 </div>
 
 <div class="main">
-  <img src="../images/zukry.png" alt="zukrypfp">
-  <h1><br><br>Zukry<br><br></h1>
+  <img src="../images/luxifer.png" alt="luxiferpfp">
+  <h1><br><br>Luxifer<br><br></h1>
   <p>words and pictures and shit go here</p>
 </div>
 <div class="sidebar">
-  <h1>Zuks Commissions</h1>
-  <iframe width="585" height="520" src="https://zukry.carrd.co/" frameborder="0"></iframe>
+  <h1>sidebar</h1>
+  <p>penis</p>
 </div>
 <div class="bottom">
   <h1>Links</h1>
-  <p><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
+  <p><a href="https://m.twitch.tv/xxxluxifer">Twitch</a><a href="https://m.youtube.com/channel/UC7hqszMgcHjM8YwDyZSESUA">Youtube</a><a href="https://scoresaber.com/u/76561198251142354">Scoresaber</a></p>
 </div>
 </body>
 </html>
