--- a/friends/index.html
+++ b/friends/index.html
@@ -22,7 +22,7 @@
 <div class="zukry">
   <h2>Zukry</h2>
   <img src="../images/zukry.png" alt="Zukry's profile picture" class="zukrypfp" href="zukry.html">
-  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="zukry.html">Profile</a><a href="https://scoresaber.com/u/76561198352885497">Scoresaber</a></p>
+  <p>zuk the zuk zuk<br>Discord: zukry#5093<br><br><a href="zukry.html">Profile</a></p>
 </div>
 <br><br><br>
 <div class="xsky">
@@ -34,7 +34,7 @@
 <div class="lux">
   <h2>Luxifer</h2>
   <img src="../images/luxifer.png" alt="Luxifer's profile picture" class="luxiferpfp">
-  <p>literally the dad tay never had<br><br><a href="https://m.twitch.tv/xxxluxifer">Twitch</a><a href="https://m.youtube.com/channel/UC7hqszMgcHjM8YwDyZSESUA">Youtube</a><a href="https://scoresaber.com/u/76561198251142354">Scoresaber</a></p>
+  <p>literally the dad tay never had<br><br><a href="luxifer.html">Profile</a></p>
 </div>
 <br><br>
 <div class="pyro">
