--- a/friends/luxifer.html
+++ b/friends/luxifer.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="main">
-  <img src="../images/luxifer.png" alt="luxiferpfp">
+  <img src="../images/luxifer.png" alt="luxiferpfp" class="pfp">
   <h1><br><br>Luxifer<br><br></h1>
   <p>words and pictures and shit go here</p>
 </div>
