--- a/friends/zukry.html
+++ b/friends/zukry.html
@@ -19,13 +19,13 @@
 </div>
 
 <div class="main">
-  <img src="../images/zukry.png" alt="zukrypfp">
+  <img src="../images/zukry.png" alt="zukrypfp"class="pfp">
   <h1><br><br>Zukry<br><br></h1>
   <p>words and pictures and shit go here</p>
 </div>
 <div class="sidebar">
   <h1>Zuks Commissions</h1>
-  <iframe width="585" height="520" src="https://zukry.carrd.co/" frameborder="0"></iframe>
+  <iframe width="590" height="625" src="https://zukry.carrd.co/" frameborder="0"></iframe>
 </div>
 <div class="bottom">
   <h1>Links</h1>
