--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  <a href="https://sscards.taynet.uk">SSCards</a>
 </div>
 
 <h1>Projects</h1>
