--- a/friends/zukry.html
+++ b/friends/zukry.html
@@ -21,7 +21,7 @@
 <div class="main">
   <img src="../images/zukry.png" alt="zukrypfp"class="pfp">
   <h1><br><br>Zukry<br><br></h1>
-  <p>words and pictures and shit go here</p>
+  <p>Le zuk,very poggies fur boi</p>
 </div>
 <div class="sidebar">
   <h1>Zuks Commissions</h1>
