--- a/helpers.html
+++ b/helpers.html
@@ -16,7 +16,6 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw">Discord</a>
-  <a href="https://sscards.taynet.uk">SSCards</a>
 </div>
 
 <h1>Helpers</h1>
@@ -37,5 +36,7 @@
   <h2>Luxifer</h2>
   <p>Helped test the website for any<br>visual issues when i asked a few billion times</p>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3879810210597192"
+     crossorigin="anonymous"></script>
 </body>
 </html>
