--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw">Discord</a>
-  <a href="https://sscards.taynet.uk">SSCards</a>
 </div>
 
 <h1>TayNet</h1>
@@ -25,5 +24,7 @@
 <p>Im tay and i like making bullshit</p>
 <p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
 <p>i love playing rhythm games but i also play a few shooters</p>
-<img src="images/funnytweet1.png" alt="funny tweet here" style="width:30%;height:30%;padding-top:60px;"class="center">
+<img src="images/funnytweet1.png" alt="funny tweet here" style="width:30%;height:30%;padding-top:60px;" class="center">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3879810210597192"
+     crossorigin="anonymous"></script>
 </html>
