--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,6 @@
   <a href="https://twitter.com/ExtincTay">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw">Discord</a>
-  <a href="https://sscards.taynet.uk">SSCards</a>
 </div>
 
 <h1>Projects</h1>
@@ -25,5 +24,7 @@
   <h2>TayNet.uk</h2>
   <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3879810210597192"
+     crossorigin="anonymous"></script>
 </body>
 </html>
