--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@
 <p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
 <p>i love playing rhythm games but i also play a few shooters</p>
 <img src="images/funnytweet1.png" alt="funny tweet here" style="width:30%;height:30%;padding-top:60px;" class="center">
+</body>
 </html>
