made the site more mobile friendly

--- a/friends/luxifer.html
+++ b/friends/luxifer.html
@@ -12,10 +12,10 @@
   <a href="../projects.html">Projects</a>
   <a href="index.html" class="active">Friends</a>
   <a href="../helpers.html">Helpers</a>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a>
-  <a href="https://twitter.com/ExtincTay">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
+  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
+  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
 </div>
 
 <div class="main">
