--- a/helpers.html
+++ b/helpers.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/helpers.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
@@ -12,10 +13,10 @@
   <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="#helpers" class="active">Helpers</a>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a>
-  <a href="https://twitter.com/ExtincTay">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
+  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
+  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
 </div>
 
 <h1>Helpers</h1>
