--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a>
-  <a href="https://twitter.com/ExtincTay">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
+  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
+  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
 </div>
 
 <h1>TayNet</h1>
-<img src="images/pfp.png" alt="Tay's Profile picture" class="center">
+<img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
 <img src="images/kotori.png" alt="Kotori" class="kotori">
-<p>Im tay and i like making bullshit</p>
+<p>Im tay and i like making shit</p>
 <p>I stream on twitch mostly on the weekends at 10pm(uk)</p>
 <p>i love playing rhythm games but i also play a few shooters</p>
-<img src="images/funnytweet1.png" alt="funny tweet here" style="width:30%;height:30%;padding-top:60px;" class="center">
+<img src="images/funnytweet1.png" alt="funny tweet here" class="center tweet">
 </body>
 </html>
