--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/projects.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
@@ -12,10 +13,10 @@
   <a href="#projects" class="active">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a>
-  <a href="https://twitter.com/ExtincTay">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
+  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
+  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
 </div>
 
 <h1>Projects</h1>
@@ -23,6 +24,19 @@
   <img src="images/www.png" alt="WWW Globe" class="wwwglobe">
   <h2>TayNet.uk</h2>
   <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
+</div>
+<div class="project2">
+  <img src="images/SScards.png" alt="SScards tays card" class="SScardimage">
+  <h2>ScoreSaber Cards</h2>
+  <p>ScoreSaber Cards is a fun little playing card generator i made for scoresaber users<br>inspired by @Denyah_ making custom cards</p>
+  <a href="sscards.taynet.uk">GO!</a>
+</div>
+<br><br>
+<div class="project3">
+  <img src="images/kobato.png" alt="Kobato bot pfp" class="KobatoIMG">
+  <h2>Kobato</h2>
+  <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
+  <a href="kobato.taynet.uk">GO!</a>
 </div>
 </body>
 </html>
