made "GO!" buttons on projects page take you to the correct link

--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,14 @@
   <img src="images/SScards.png" alt="SScards tays card" class="SScardimage">
   <h2>ScoreSaber Cards</h2>
   <p>ScoreSaber Cards is a fun little playing card generator i made for scoresaber users<br>inspired by @Denyah_ making custom cards</p>
-  <a href="sscards.taynet.uk">GO!</a>
+  <a href="https://sscards.taynet.uk">GO!</a>
 </div>
 <br><br>
 <div class="project3">
   <img src="images/kobato.png" alt="Kobato bot pfp" class="KobatoIMG">
   <h2>Kobato</h2>
   <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
-  <a href="kobato.taynet.uk">GO!</a>
+  <a href="https://kobato.taynet.uk">GO!</a>
 </div>
 </body>
 </html>
