--- a/commissions.html
+++ b/commissions.html
@@ -3,17 +3,17 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/projects.css">
+  <link rel="stylesheet" href="css/commissions.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <title>TayNet | Projects</title>
 </head>
 <body>
 <div class="topnav" id="main">
   <a href="index.html">Home</a>
-  <a href="#projects" class="active">Projects</a>
+  <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
-  <a href="commissions.html">commissions</a>
+  <a href="#commissions" class="active">commissions</a>
   <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
   <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
