--- a/commissions.html
+++ b/commissions.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/commissions.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
-  <title>TayNet | Projects</title>
+  <title>TayNet | Comissions</title>
 </head>
 <body>
 <div class="topnav" id="main">
@@ -13,31 +13,18 @@
   <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
-  <a href="#commissions" class="active">commissions</a>
+  <a href="#commissions" class="active">Commissions</a>
   <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
   <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
 </div>
 
-<h1>Projects</h1>
+<h1>Commissions</h1>
+<p>If you would like a commission please reach out to me on discord or twitter (ExtincTay#1297 @ExtincTay)</p>
 <div class="project1">
-  <img src="images/www.png" alt="WWW Globe" class="wwwglobe">
-  <h2>TayNet.uk</h2>
-  <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
-</div>
-<div class="project2">
-  <img src="images/SScards.png" alt="SScards tays card" class="SScardimage">
-  <h2>ScoreSaber Cards</h2>
-  <p>ScoreSaber Cards is a fun little playing card generator i made for scoresaber users<br>inspired by @Denyah_ making custom cards</p>
-  <a href="https://sscards.taynet.uk">GO!</a>
-</div>
-<br><br>
-<div class="project3">
-  <img src="images/kobato.png" alt="Kobato bot pfp" class="KobatoIMG">
-  <h2>Kobato</h2>
-  <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
-  <a href="https://kobato.taynet.uk">GO!</a>
+  <h2>Websites</h2>
+  <p>I will make you a website for starting at £3 with a max price of £10<br>when you dm me i will need a design idea (preferably a drawn up picture) along with what features you need and where you need them</p>
 </div>
 </body>
 </html>
