--- a/helpers.html
+++ b/helpers.html
@@ -13,7 +13,7 @@
   <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="#helpers" class="active">Helpers</a>
-  <a href="commissions.html">commissions</a>
+  <a href="commissions.html">Commissions</a>
   <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
   <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
