--- a/commissions.html
+++ b/commissions.html
@@ -21,10 +21,10 @@
 </div>
 
 <h1>Commissions</h1>
-<h1>If you would like a commission please reach out to me on discord or twitter (ExtincTay#1297 @ExtincTay)</h1>
+<h1>If you would like a commission please reach out to me on discord or twitter (ExtincTay#1297 or @ExtincTay)</h1>
 <div class="project1">
   <h2>Websites</h2>
-  <p>I will make you a website for starting at £3 with a max price of £10<br>when you dm me i will need a design idea (preferably a drawn up picture) along with what features you need and where you need them</p>
+  <p>I will make you a website for starting at £3 with a max price of £10<br>when you dm me i will need a design plan of everything you want<br>if you would like to see anything i have worked on please check my projects page</p>
 </div>
 </body>
 </html>
