--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>TayNet | Home</title>
 </head>
 <body>
-<div class="topnav" id="main">
-  <a href="#home" class="active">Home</a>
+<nav>
+  <a href="index.html" class="Main" class="active"><h1>TayNet</h1></a>
   <a href="projects.html">Projects</a>
   <a href="friends/index.html">Friends</a>
   <a href="helpers.html">Helpers</a>
@@ -18,9 +18,8 @@
   <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
   <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
   <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
-</div>
+</nav>
 
-<h1>TayNet</h1>
 <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
 <img src="images/kotori.png" alt="Kotori" class="kotori">
 <p>Im tay and i like making shit</p>
