--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <a href="index.html" class="Main" class="active"><h1>TayNet</h1></a>
 <nav>
-  <a href="projects.html"  class="Sub">Projects</a>
-  <a href="friends/index.html" class="Sub">Friends</a>
-  <a href="helpers.html" class="Sub">Helpers</a>
-  <a href="commissions.html" class="Sub">Commissions</a>
-  <a href="https://twitch.tv/ExtincTay" class="Sub">Twitch</a>
-  <a href="https://twitter.com/ExtincTay" class="Sub">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578" class="Sub">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw" class="Sub">Discord</a>
+  <a href="projects.html">Projects</a>
+  <a href="friends/index.html">Friends</a>
+  <a href="helpers.html">Helpers</a>
+  <a href="commissions.html">Commissions</a>
+  <a href="https://twitch.tv/ExtincTay">Twitch</a>
+  <a href="https://twitter.com/ExtincTay">Twitter</a>
+  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
+  <a href="https://discord.gg/74erf7MAsw">Discord</a>
 </nav>
 
 <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
