--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   <title>TayNet | Home</title>
 </head>
 <body>
-<a href="index.html" class="Main" class="active"><h1>TayNet</h1></a>
-<nav>
-  <a href="projects.html">Projects</a>
-  <a href="friends/index.html">Friends</a>
-  <a href="helpers.html">Helpers</a>
-  <a href="commissions.html">Commissions</a>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a>
-  <a href="https://twitter.com/ExtincTay">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a>
-</nav>
+<div class="navholder">
+  <a href="index.html" class="Main" class="active"><h1>TayNet</h1></a>
+  <nav>
+    <a href="projects.html">Projects</a>
+    <a href="friends/index.html">Friends</a>
+    <a href="helpers.html">Helpers</a>
+    <a href="commissions.html">Commissions</a>
+    <a href="https://twitch.tv/ExtincTay">Twitch</a>
+    <a href="https://twitter.com/ExtincTay">Twitter</a>
+    <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a>
+    <a href="https://discord.gg/74erf7MAsw">Discord</a>
+  </nav>
+</div>
 
 <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
 <img src="images/funnytweet1.png" alt="funny tweet here" class="center tweet">
