--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="navholder">
-  <a href="index.html" class="Main" class="active"><h1>TayNet</h1></a>
+  <a href="index.html" class="Main"><h1>TayNet</h1></a>
   <nav>
     <a href="projects.html">Projects</a>
     <a href="friends/index.html">Friends</a>
