--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <a href="index.html" class="Main"><h1>TayNet</h1></a>
 <nav>
-  <a href="projects.html">Projects</a><br>
-  <a href="friends/index.html">Friends</a><br>
-  <a href="helpers.html">Helpers</a><br>
-  <a href="commissions.html">Commissions</a><br>
-  <a href="https://twitch.tv/ExtincTay">Twitch</a><br>
-  <a href="https://twitter.com/ExtincTay">Twitter</a><br>
-  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br>
-  <a href="https://discord.gg/74erf7MAsw">Discord</a><br>
+  <a href="projects.html">Projects</a><br><br>
+  <a href="friends/index.html">Friends</a><br><br>
+  <a href="helpers.html">Helpers</a><br><br>
+  <a href="commissions.html">Commissions</a><br><br>
+  <a href="https://twitch.tv/ExtincTay">Twitch</a><br><br>
+  <a href="https://twitter.com/ExtincTay">Twitter</a><br><br>
+  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
+  <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
 </nav>
 
 <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
