--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>TayNet | Home</title>
 </head>
 <body>
-<a href="index.html" class="Main"><h1>TayNet</h1></a>
 <nav>
+  <a href="index.html"><h1>TayNet</h1></a><br><br>
   <a href="projects.html">Projects</a><br><br>
   <a href="friends/index.html">Friends</a><br><br>
   <a href="helpers.html">Helpers</a><br><br>
