--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
 </nav>
 
-<img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
+<div class="content">
+  <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br>Thanks for checking out my website it was a pain in the ass to make</p>
+  <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
+</div>
 </body>
 </html>
