--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </nav>
 
 <div class="content">
-  <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br>Thanks for checking out my website it was a pain in the ass to make</p>
+  <div class="text1">
+    <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br>Thanks for checking out my website it was a pain in the ass to make</p>
+  </div>
   <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
 </div>
 </body>
