--- a/projects.html
+++ b/projects.html
@@ -8,17 +8,16 @@
   <title>TayNet | Projects</title>
 </head>
 <body>
-<div class="topnav" id="main">
-  <a href="index.html">Home</a>
-  <a href="#projects" class="active">Projects</a>
-  <a href="friends/index.html">Friends</a>
-  <a href="helpers.html">Helpers</a>
-  <a href="commissions.html">Commissions</a>
-  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
-  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
-</div>
+<nav>
+  <a href="index.html"><h1>TayNet</h1></a><br><br>
+  <a href="projects.html">Projects</a><br><br>
+  <a href="helpers.html">Helpers</a><br><br>
+  <a href="commissions.html">Commissions</a><br><br>
+  <a href="https://twitch.tv/ExtincTay">Twitch</a><br><br>
+  <a href="https://twitter.com/ExtincTay">Twitter</a><br><br>
+  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
+  <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
+</nav>
 
 <h1>Projects</h1>
 <div class="project1">
