--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
 </nav>
 
-<h1>Projects</h1>
+<h2>TayNet/Projects</h2>
 <div class="project1">
   <img src="images/www.png" alt="WWW Globe" class="wwwglobe">
   <h2>TayNet.uk</h2>
