--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
   <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
 </nav>
-
+<h2>TayNet</h2>
 <div class="content">
   <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
   <div class="text1">
