--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="content">
   <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
   <div class="text1">
-    <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br><br>Thanks for checking out my website<br>it was a pain in the ass to make</p>
+    <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br>Thanks for checking out my website<br>it was a pain in the ass to make</p>
   </div>
 </div>
 </body>
