--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav>
-  <a href="index.html"><h1>TayNet</h1></a><br><br>
+  <a href="index.html"><h1>TayNet</h1></a><br>
   <a href="projects.html">Projects</a><br><br>
   <a href="helpers.html">Helpers</a><br><br>
   <a href="commissions.html">Commissions</a><br><br>
