--- a/commissions.html
+++ b/commissions.html
@@ -8,23 +8,21 @@
   <title>TayNet | Comissions</title>
 </head>
 <body>
-<div class="topnav" id="main">
-  <a href="index.html">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="friends/index.html">Friends</a>
-  <a href="helpers.html">Helpers</a>
-  <a href="#commissions" class="active">Commissions</a>
-  <a href="https://twitch.tv/ExtincTay" class="social">Twitch</a>
-  <a href="https://twitter.com/ExtincTay" class="social">Twitter</a>
-  <a href="https://scoresaber.com/u/76561198388103578" class="social">Scoresaber</a>
-  <a href="https://discord.gg/74erf7MAsw" class="social">Discord</a>
-</div>
+<nav>
+  <a href="index.html"><h1>TayNet</h1></a><br>
+  <a href="projects.html">Projects</a><br><br>
+  <a href="commissions.html">Commissions</a><br><br>
+  <a href="https://twitch.tv/ExtincTay">Twitch</a><br><br>
+  <a href="https://twitter.com/ExtincTay">Twitter</a><br><br>
+  <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
+  <a href="https://discord.gg/74erf7MAsw">Discord</a><br><br>
+</nav>
 
-<h1>Commissions</h1>
-<h1>If you would like a commission please reach out to me on discord or twitter (ExtincTay#1297 or @ExtincTay)</h1>
-<div class="project1">
-  <h2>Websites</h2>
-  <p>I will make you a website for starting at £3 with a max price of £10<br>when you dm me i will need a design plan of everything you want<br>if you would like to see anything i have worked on please check my projects page</p>
+<h2>TayNet/Commissions</h2>
+<h3>To commission anything please dm me on discord: ExtincTay#1297</h3>
+<div class="comm1">
+  <h4>Website</h4>
+  <p>Basic: £5 - as many pages as you would like with html and css</p>
 </div>
 </body>
 </html>
