--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="content">
   <img src="images/pfp.png" alt="Tay's Profile picture" class="pfp">
   <div class="text1">
-    <p>Hey there,<br>Im Tay and welcome to my website<br>I like to code, play games and stream<br>Thanks for checking out my website</p>
+    <p>Hey there,<br>Im Tay and welcome to my website.<br>I like to code, play games and stream.<br>Thanks for checking out my website.</p>
   </div>
 </div>
 </body>
