--- a/commissions.html
+++ b/commissions.html
@@ -24,5 +24,13 @@
   <h4>Website</h4>
   <p>Basic: £5 - as many pages as you would like with html and css</p>
 </div>
+<div class="comm2">
+  <h4>Minecraft Server Files</h4>
+  <p>Basic: £2 - custom server settings and maps running on paper-mc<br>can have plugins with default settings</p>
+  <br><br>
+  <p>Pro: £5 - same as basic with custom settings done for the plugins or mods<br>pick your own server .jar (not includding proxies)</p>
+  <br><br>
+  <p>Full: £10-£15 - Completely custom with Proxy networks and all plugins set up to your specification</p>
+</div>
 </body>
 </html>
