--- a/projects.html
+++ b/projects.html
@@ -19,22 +19,24 @@
 </nav>
 
 <h2>TayNet/Projects</h2>
-<div class="project1">
-  <img src="images/www.png" alt="WWW Globe">
-  <h3>TayNet.uk</h3>
-  <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
-</div>
-<div class="project2">
-  <img src="images/SScards.png" alt="SScards tays card">
-  <h3>ScoreSaber Cards</h3>
-  <p>ScoreSaber Cards is a fun little playing card generator i made for scoresaber users<br>inspired by @Denyah_ making custom cards</p>
-  <a href="https://sscards.taynet.uk">GO!</a>
-</div>
-<div class="project3">
-  <img src="images/kobato.png" alt="Kobato bot pfp">
-  <h3>Kobato</h3>
-  <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
-  <a href="https://kobato.taynet.uk">GO!</a>
+<div class="project-holder">
+  <div class="project1">
+    <img src="images/www.png" alt="WWW Globe">
+    <h3>TayNet.uk</h3>
+    <p>TayNet.uk is my attempt at making a decent website from html and css.<br>i do follow some tutorials but most of the website is hand written and it hurts.<br>thanks for checking out my website, join my discord and let me know what you<br>think about this website and what i can do to improve it</p>
+  </div>
+  <div class="project2">
+    <img src="images/SScards.png" alt="SScards tays card">
+    <h3>ScoreSaber Cards</h3>
+    <p>ScoreSaber Cards is a fun little playing card generator i made for scoresaber users<br>inspired by @Denyah_ making custom cards</p>
+    <a href="https://sscards.taynet.uk">GO!</a>
+  </div>
+  <div class="project3">
+    <img src="images/kobato.png" alt="Kobato bot pfp">
+    <h3>Kobato</h3>
+    <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
+    <a href="https://kobato.taynet.uk">GO!</a>
+  </div>
 </div>
 </body>
 </html>
