comms and projects

--- a/commissions.html
+++ b/commissions.html
@@ -19,18 +19,16 @@
 </nav>
 
 <h2>TayNet/Commissions</h2>
-<h3>To commission anything please dm me on discord: ExtincTay#1297</h3>
-<div class="comm1">
-  <h4>Website</h4>
-  <p>Basic: £5 - as many pages as you would like with html and css</p>
-</div>
-<div class="comm2">
-  <h4>Minecraft Server Files</h4>
-  <p>Basic: £2 - custom server settings and maps running on paper-mc<br>can have plugins with default settings</p>
-  <br><br>
-  <p>Pro: £5 - same as basic with custom settings done for the plugins or mods<br>pick your own server .jar (not includding proxies)</p>
-  <br><br>
-  <p>Full: £10-£15 - Completely custom with Proxy networks and all plugins set up to your specification</p>
+<h3>To commission anything please email me here <a href="mailto:extinctay@taynet.uk">extinctay@taynet.uk</a></h3>
+<div class="comm-holder">
+  <div class="comm">
+    <h4>Website</h4>
+    <p>Basic: £5<br>as many pages as you would like with html and css</p>
+  </div>
+  <div class="comm">
+    <h4>SOON™</h4>
+    <p>Basic: £420.69<br>haha funny number</p>
+  </div>
 </div>
 </body>
 </html>
