--- a/commissions.html
+++ b/commissions.html
@@ -23,7 +23,7 @@
 <div class="comm-holder">
   <div class="comm">
     <h4>Website</h4>
-    <p>Basic: £5<br>as many pages as you would like with html and css</p>
+    <p>Basic: £5<br>as many pages as you would like with html and css and js</p>
   </div>
   <div class="comm">
     <h4>SOON™</h4>
