--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,12 @@
     <p>Kobato is my multi purpose discord bot waifu with some pretty poggers commands</p>
     <a href="https://kobato.taynet.uk">GO!</a>
   </div>
+  <div class="project">
+    <img src="images/placeholder.gif" alt="esports team logo">
+    <h3>Extinc Esports Team</h3>
+    <p>I founded the esports team Extinc.<br>i also created the discord and webpage for it.<br>please check it out and maybe even apply</p>
+    <a href="https://extinc.taynet.uk">GO!</a>
+  </div>
 </div>
 </body>
 </html>
