--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,12 @@
     <p>I founded the esports team Extinc.<br>i also created the discord and webpage for it.<br>please check it out and maybe even apply</p>
     <a href="https://extinc.taynet.uk">GO!</a>
   </div>
+  <div class="project">
+    <img src="images/placeholder.gif" alt="Scoresaber Compare Picture">
+    <h3>ScoreSaber Compare</h3>
+    <p>Just compares scoresaber pages or you can add "/raw" to the url for raw text values</p>
+    <a href="https://sscompare.taynet.uk">GO!</a>
+  </div>
 </div>
 </body>
 </html>
