--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <div class="text1">
     <p>Hey there,<br>Im Tay and welcome to my website.<br>I like to code, play games and stream.<br>Thanks for checking out my website.</p>
   </div>
+  <div class="text2">
+    <h1>News</h1>
+    <p>Added new projects and removed mc server commission</p>
+    <p>JOIN EXITNC ESPORTS TEAM FOR VALORANT OR VAIL TODAY. <a href="extinc.taynet.uk">JOIN NOW!</a></p>
+  </div>
 </div>
 </body>
 </html>
