added titles to nav bar

--- a/titles.html
+++ b/titles.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/titles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <title>TayNet | Titles</title>
 </head>
@@ -12,6 +12,7 @@
   <a href="index.html"><h1>TayNet</h1></a><br>
   <a href="projects.html">Projects</a><br><br>
   <a href="commissions.html">Commissions</a><br><br>
+  <a href="titles.html">RPG Titles</a><br><br>
   <a href="https://twitch.tv/ExtincTay">Twitch</a><br><br>
   <a href="https://twitter.com/ExtincTay">Twitter</a><br><br>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
