--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
   <a href="index.html"><h1>TayNet</h1></a><br>
   <a href="projects.html">Projects</a><br><br>
   <a href="commissions.html">Commissions</a><br><br>
+  <a href="titles.html">RPG Titles</a><br><br>
   <a href="https://twitch.tv/ExtincTay">Twitch</a><br><br>
   <a href="https://twitter.com/ExtincTay">Twitter</a><br><br>
   <a href="https://scoresaber.com/u/76561198388103578">Scoresaber</a><br><br>
