--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
     <a href="https://kobato.taynet.uk">GO!</a>
   </div>
   <div class="project">
-    <img src="images/placeholder.gif" alt="esports team logo">
+    <img src="images/ExtincESportsLogo.png" alt="esports team logo">
     <h3>Extinc Esports Team</h3>
     <p>I founded the esports team Extinc.<br>i also created the discord and webpage for it.<br>please check it out and maybe even apply</p>
     <a href="https://extinc.taynet.uk">GO!</a>
