added another title

--- a/titles.html
+++ b/titles.html
@@ -24,6 +24,10 @@
         <h1>The twitter user annoyer</h1>
         <p>obtained by annoying someone to the point they go out of their way to block you on twitter</p>
     </div>
+    <div class="title2">
+      <h1>Music Addict</h1>
+      <p>Listened to too much music in a wide variety of genres endlessly</p>
+  </div>
 </div>
 </body>
 </html>
