--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
     <a href="https://extinc.taynet.uk">GO!</a>
   </div>
   <div class="project">
-    <img src="images/placeholder.gif" alt="Scoresaber Compare Picture">
+    <img src="images/sscompare.png" alt="Scoresaber Compare Picture">
     <h3>ScoreSaber Compare</h3>
     <p>Just compares scoresaber pages or you can add "/raw" to the url for raw text values</p>
     <a href="https://sscompare.taynet.uk">GO!</a>
